--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: white;
-  font-family: 'Poppins' sans-serif;
+  font-family: "Poppins" sans-serif;
+}
+:root {
+  --text-primary: #fff;
+  --text-secundary: #1fc904;
+  --button-color: #1bde25;
 }
 body {
-  background-color: black;
+  background-color: black !important;
 }
 .content {
   width: 100%;
@@ -26,18 +30,79 @@ body {
   grid-template-columns: 40% 50%;
 } */
 .parent .text-container img {
-  width: 200px !important;
+  width: 30%;
 }
 .text-container {
   display: flex;
   flex-direction: column;
-  padding: 120px;
-  max-width: 60%;
+  padding: 115px;
+  max-width: 58%;
 }
 .text-container h1 {
   font-size: 4.2rem;
-  font-family: chairdrobe,Sans-serif;
+  font-family: chairdrobe, Sans-serif;
   font-weight: 600;
+  color: var(--text-primary);
+}
+.text-container p {
+  font-size: 1.3rem;
+  font-family: poppins, Sans-serif;
+  font-weight: 400;
+  line-height: 1.2em;
+  color: var(--text-primary);
+}
+.text-container .date-event .newsletter .date span {
+  font-family: poppins, Sans-serif;
+  text-transform: uppercase;
+  font-weight: 800;
+  font-size: 1.5rem;
+  color: var(--text-primary);
+}
+.text-container .date-event .newsletter .date p {
+  font-size: 1.1rem;
+  font-weight: 300;
+  color: var(--text-primary);
+}
+.form-event form {
+  margin-top: 15px;
+  font-family: "Montserrat", sans-serif, "IBM Plex Sans", arial, sans-serif;
+  margin: 25px 45px 0 0;
+  display: flex;
+  gap: 10px;
+}
+.form-event label {
+  color: var(--text-primary);
+}
+.form-event form input {
+  font-size: 0.8rem;
+  width: 100%;
+  border-radius: 4px;
+  height: auto;
+  padding: 10px;
+  border: darkgray 1px solid;
+  color: rgb(0, 0, 0);
+  font-family: "Montserrat" sans-serif;
+}
+.form-event form button {
+  cursor: pointer;
+  border-radius: 5px;
+  background: var(--button-color);
+  border: 0;
+  color: var(--text-primary);
+  padding: 9px;
+  text-align: center;
+  width: 100%;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-family: "Montserrat" sans-serif;
+}
+.form-event form p,
+.form-event form a {
+  margin-top: 18px;
+  color: #808080;
+  font-weight: 300;
+  font-size: 0.75rem;
 }
 .img-mobile {
   display: none;
@@ -49,6 +114,7 @@ body {
 }
 .date-event .date-icon {
   width: 30px;
+  color: var(--text-primary);
 }
 .date-event .date-icon span {
   font-size: 1.7em;
@@ -56,4 +122,180 @@ body {
 .newsletter .form-event form {
   display: flex;
   flex-direction: column;
+}
+
+/* Cards */
+
+.content-card {
+  background-image: url("../img/Design-LP-Norton_02.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.content-card h1 {
+  color: var(--button-color);
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+.cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cards .card {
+  background-color: transparent;
+  border: 4px solid var(--button-color);
+  border-radius: 20px;
+  margin: 0 20px;
+  height: 230px;
+}
+.cards .card .card-body {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cards .card p {
+  color: var(--text-primary);
+  font-size: 1.1rem;
+  font-weight: 400;
+  font-family: poppins, Sans-serif;
+  padding: 15px;
+  text-align: center;
+}
+.content-card .button-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.content-card .button-card button {
+  cursor: pointer;
+  border-radius: 5px;
+  background: var(--button-color);
+  border: 0;
+  color: var(--text-primary);
+  padding: 9px;
+  text-align: center;
+  width: 45%;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  font-family: "Montserrat" sans-serif;
+}
+
+/* Week */
+.negrito {
+  font-weight: bold;
+}
+.content-week {
+  background-image: url("../img/Design-LP-Norton_02.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.content-week .week-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  text-align: center;
+}
+.content-week .week-info .week-title,
+.content-week .week-info p {
+  color: var(--text-primary);
+}
+.content-week .week-info .week-sub-title {
+  color: var(--text-secundary);
+}
+.content-week .week-info .week-extra {
+  padding: 50px;
+  background-color: var(--button-color);
+  color: black;
+  font-family: montserrat, Sans-serif;
+  text-transform: uppercase;
+}
+.content-week .week-info .week-jobs {
+  color: var(--text-secundary);
+  font-weight: 700;
+}
+.content-week .week-info button {
+  cursor: pointer;
+  border-radius: 5px;
+  background: var(--button-color);
+  border: 0;
+  color: var(--text-primary);
+  padding: 9px;
+  text-align: center;
+  width: 35%;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.3rem;
+  font-family: "Montserrat" sans-serif;
+}
+
+/* Coach */
+
+.content-coach .coach-division {
+  display: flex;
+}
+.content-coach .coach-img,
+.content-coach .coach-text {
+  width: 50%;
+  margin: 10px 20px;
+  color: var(--text-primary);
+}
+.content-coach h2 {
+  text-transform: uppercase;
+  color: var(--text-secundary);
+  text-align: center;
+  margin-top: 70px;
+  font-weight: 700;
+}
+.content-coach .coach-title-one {
+  color: var(--text-secundary);
+  font-family: montserrat, Sans-serif;
+  font-weight: 800;
+  letter-spacing: 2.5px;
+  font-size: 3.1rem;
+}
+.content-coach .coach-title-two {
+  color: var(--text-primary);
+  font-weight: lighter;
+  letter-spacing: 2.5px;
+  font-size: 3.1rem;
+  font-family: montserrat, Sans-serif;
+}
+.content-coach .coach-p {
+  font-size: 1.25rem;
+  font-weight: 400;
+}
+
+.content-coach .coach-img img {
+  height: 800px;
+}
+.content-coach .coach-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+.content-coach .coach-button button {
+  cursor: pointer;
+  border-radius: 5px;
+  background: var(--button-color);
+  border: 0;
+  color: var(--text-primary);
+  padding: 15px;
+  text-align: center;
+  width: 35%;
+  font-weight: 800;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-family: "Montserrat" sans-serif;
+  box-shadow: 0 0 15px 12px rgba(0, 243, 41, 0.35);
 }
